--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,13 @@
         android:theme="@style/Theme.Box1"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".vista.Registro"
+            android:exported="false" />
+        <activity
+            android:name=".vista.MainActivity"
+            android:exported="false" />
+        <activity
+            android:name=".vista.SplashScreen"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
